border to sections prevents collapsing margins

--- a/styles/less/custom.less
+++ b/styles/less/custom.less
@@ -214,7 +214,7 @@ z-index: 999;
 .section {
 min-height: 100%;
 position: relative;
-border-top: 1px solid red; //temporary
+border-top: 1px solid @yellow; //temporary
 }
 
 .section.dark {
